[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "async-local"
version = "1.1.1"
description = "For safely extending the lifetime of thread locals"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"

[dependencies]
derive-async-local = { version = "1.1.0", path = "./derive-async-local" }
num_cpus = "1"
pin-project = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
async-trait = "0.1.66"
tokio = { version = "1", features = ["macros"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = [] }

[lib]
doctest = false
bench = false

[features]
default = ["tokio-runtime"]

# Enable with_blocking to spawn blocking tasks onto the Tokio Runtime
tokio-runtime = ["tokio"]

# Tokio Runtime configured with a barrier-synchronized shutdown as to ensure tasks never outlive worker thread owned local data
barrier-protected-runtime = ["tokio-runtime", "tokio/rt-multi-thread"]

[workspace]
members = ["derive-async-local"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
