[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2024"
name = "async-local"
version = "4.0.0"
description = "For using thread locals within an async context and across await points"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"
rust-version = "1.85"

[dependencies]
ctor = { version = "0.4.1", default-features = false, features = [
    "proc_macro",
] }
derive-async-local = { version = "4.0.0", path = "./derive-async-local" }
generativity = "1.1"
linkme = "0.3.32"
num_cpus = "1.16"
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = [] }

[lib]
doctest = false
bench = false

[features]
default = ["tokio-runtime"]

# Enable with_blocking to spawn blocking tasks onto the Tokio Runtime
tokio-runtime = ["tokio"]

# Tokio Runtime configured with a barrier-synchronized shutdown as to ensure tasks never outlive worker thread owned local data
# 
# SAFETY: It is unsound to enable this feature without using the provided runtime builder exclusively
barrier-protected-runtime = ["tokio-runtime", "tokio/rt-multi-thread"]

[workspace]
members = ["derive-async-local"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
