[package]
name = "derive-async-local"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2024"
version = "6.0.2"
description = "Derives for async-local"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"
rust-version = "1.85"

[lib]
test = false
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
rt-multi-thread = []
