[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "doomsday-clock"
version = "0.0.1"
description = ""
readme = "../README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"
publish = false

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-local = { path = "../" }
num_cpus = "1.14.0"
pin-project = "1"
static_assertions = "1.1.0"
tokio = { version = "1", features = [
  "parking_lot",
  "sync",
] }

[[bin]]
name = "doomsday-clock"
doctest = false
bench = false
test = false

[features]
default = ["tokio-runtime"]
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio/macros", "tokio/rt-multi-thread", "tokio/rt"]