[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "doomsday-clock"
version = "0.5.0"
description = "Async runtime shutdown safety test. Handle with care"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"

[dependencies]
async-local = { path = "../", version = "0.5.0" }
async-std = { version = "1", features = ["attributes"], optional = true }
easy-parallel = { version = "3.2.0", optional = true }
num_cpus = "1.14.0"
pin-project = "1"
smol = { version = "1", optional = true }
static_assertions = "1.1.0"
tokio = { version = "1", features = ["parking_lot", "sync"] }

[[bin]]
name = "doomsday-clock"
doctest = false
bench = false
test = false

[features]
default = ["tokio-runtime"]
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio/macros", "tokio/rt-multi-thread", "tokio/rt"]
smol-runtime = ["smol", "easy-parallel"]

[package.metadata.docs.rs]
features = ["async-std-runtime", "tokio-runtime", "smol-runtime"]
