[package]
name = "shutdown-barrier"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "1.0.0"
description = "Runtime shutdown barrier for synchronizing TLS destructors"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"

[lib]
doctest = false
bench = false
