[package]
name = "shutdown-barrier"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "1.0.0"
description = "Runtime shutdown barrier for synchronizing TLS destructors"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"

[lib]
doctest = false
bench = false

[dependencies]
static_assertions = "1.1"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = [] }

[package.metadata.docs.rs]
features = ["tokio-runtime", "async-std-runtime"]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
