[package]
name = "shutdown-barrier"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "3.0.0"
description = "Runtime shutdown barrier for synchronizing TLS destruction"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/async-local/"

[lib]
doctest = false
bench = false

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = [] }
